removed collectors and replaced with "toList()" in createBookingListFromMiniBookingsDtoList